--- a/module_4/[DSPR_26]_ПРОЕКТ_4_Авиарейсы_без_потерь_Dmitry_Lepin.ipynb
+++ b/module_4/[DSPR_26]_ПРОЕКТ_4_Авиарейсы_без_потерь_Dmitry_Lepin.ipynb
@@ -72,7 +72,7 @@
         "5. `fullness` -- заполненность рейса, %\n",
         "6. `month_flight` -- месяц рейса\n",
         "7. `week_day` -- день недели (1-понедельник... 7-воскресенье)\n",
-        "8. `profit` -- прибыль (разница между выручкой за билеты и затратами на топливо)\n",
+        "8. `profit` -- прибыль тыс. руб. (разница между выручкой за билеты и затратами на топливо)\n",
         "12. `profit_pkm` -- прибыль на 1 пассажиро-километр\n",
         "\n",
         "* обязательные поля\n"
@@ -2286,6 +2286,48 @@
             "tags": []
           },
           "execution_count": 367
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aEouQBBEMiTM"
+      },
+      "source": [
+        "# Дополнительное задание\n",
+        "\n",
+        "Я бы предложил убрать рейсы из полученного \"узкого списка\" - df_narrow\n",
+        "* 136844\n",
+        "* 136887\n",
+        "* 136807\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_UFew9iNM2zl",
+        "outputId": "8955df56-02e4-46e7-a76f-09074075fc82"
+      },
+      "source": [
+        "df_narrow['profit'].sum()*1000"
+      ],
+      "execution_count": 380,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1558600.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 380
         }
       ]
     }
