добавлено дополнительное решение

--- a/module_4/[DSPR_26]_ПРОЕКТ_4_Авиарейсы_без_потерь_Dmitry_Lepin.ipynb
+++ b/module_4/[DSPR_26]_ПРОЕКТ_4_Авиарейсы_без_потерь_Dmitry_Lepin.ipynb
@@ -2310,24 +2310,113 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_UFew9iNM2zl",
-        "outputId": "8955df56-02e4-46e7-a76f-09074075fc82"
+        "outputId": "9386c3bc-123c-4749-fd16-dd7df876c88b"
       },
       "source": [
-        "df_narrow['profit'].sum()*1000"
+        "df_narrow['profit'].mean()*1000"
       ],
-      "execution_count": 380,
+      "execution_count": 381,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1558600.0"
+              "519533.3333333333"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 380
+          "execution_count": 381
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I_71OPkXP7n5",
+        "outputId": "f97dc81f-3284-4ad6-a929-513dd30e7e3b"
+      },
+      "source": [
+        "# средняя прибыльность рейса до корректировок\n",
+        "round(avia['profit'].mean()*1000,2)"
+      ],
+      "execution_count": 392,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1078804.66"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 392
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "10pfeTEtQsiK",
+        "outputId": "1bdb86b6-f527-4377-9af5-9c0e7f522461"
+      },
+      "source": [
+        "# средняя прибыльность рейса исключая  df_narrow\n",
+        "l = list(df_narrow['flight_id'])\n",
+        "round(avia.query('flight_id not in @l')['profit'].mean()*1000,2)"
+      ],
+      "execution_count": 402,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1093394.35"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 402
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uJLCNNG1Ryai",
+        "outputId": "0a1711ff-6314-40d9-f73f-d1af80e8f458"
+      },
+      "source": [
+        "# средняя прибыльность рейса исключая  df_wide\n",
+        "l = list(df_wide['flight_id'])\n",
+        "round(avia.query('flight_id not in @l')['profit'].mean()*1000,2)"
+      ],
+      "execution_count": 401,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1119427.57"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 401
         }
       ]
     }
